feat: 업데이트 반영

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "잇다 - 인플루언서 매칭",
-  "short_name": "잇다",
+  "name": "인플루언서 매칭 플랫폼",
+  "short_name": "InfMatch",
   "description": "브랜드와 인플루언서를 연결하는 스마트한 플랫폼",
   "theme_color": "#51a66f",
   "background_color": "#ffffff",
@@ -8,24 +8,81 @@
   "orientation": "portrait",
   "scope": "/",
   "start_url": "/",
+  "categories": ["business", "social"],
   "icons": [
+    {
+      "src": "/icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "any"
+    },
     {
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/icons/icon-512x512.png", 
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "maskable any"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "/screenshots/home.png",
+      "sizes": "1170x2532",
+      "type": "image/png",
+      "label": "홈 화면"
     },
     {
-      "src": "/icons/icon-maskable-512x512.png",
-      "sizes": "512x512", 
+      "src": "/screenshots/dashboard.png",
+      "sizes": "1170x2532",
       "type": "image/png",
-      "purpose": "maskable"
+      "label": "대시보드"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "캠페인 찾기",
+      "url": "/influencer/campaigns",
+      "description": "새로운 캠페인 찾아보기"
+    },
+    {
+      "name": "대시보드",
+      "url": "/dashboard",
+      "description": "내 대시보드 바로가기"
     }
   ]
 }
