feat: 업데이트 반영

--- a/.env.local
+++ b/.env.local
@@ -17,3 +17,6 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 
 
 FACEBOOK_APP_SECRET=d0fbe33e2164cc3309a09641a347c823
+
+ANTHROPIC_API_KEY=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
+SKIP_TYPE_CHECK=true
