--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,19 @@
 {
-  "name": "인플루언서 매칭 플랫폼",
-  "short_name": "InfMatch",
-  "description": "브랜드와 인플루언서를 연결하는 스마트한 플랫폼",
-  "theme_color": "#51a66f",
-  "background_color": "#ffffff",
+  "name": "ITDA",
+  "short_name": "ITDA",
+  "description": "ITDA - 새로운 모바일 경험",
+  "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "scope": "/",
-  "start_url": "/",
-  "categories": ["business", "social"],
+  "theme_color": "#000000",
+  "background_color": "#ffffff",
+  "id": "/?source=pwa",
+  "lang": "ko-KR",
+  "dir": "ltr",
+  "categories": ["social", "lifestyle"],
+  "iarc_rating_id": "e84b072d-71b3-4d3e-86ae-31a8ce4e53b7",
+  
   "icons": [
     {
       "src": "/icons/icon-72x72.png",
@@ -44,7 +49,7 @@
       "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
     },
     {
       "src": "/icons/icon-384x384.png",
@@ -56,33 +61,152 @@
       "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/maskable-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icons/maskable-icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
+  
   "screenshots": [
     {
-      "src": "/screenshots/home.png",
+      "src": "/screenshots/screenshot-1.png",
       "sizes": "1170x2532",
       "type": "image/png",
       "label": "홈 화면"
     },
     {
-      "src": "/screenshots/dashboard.png",
+      "src": "/screenshots/screenshot-2.png",
       "sizes": "1170x2532",
       "type": "image/png",
-      "label": "대시보드"
-    }
-  ],
-  "shortcuts": [
-    {
-      "name": "캠페인 찾기",
-      "url": "/influencer/campaigns",
-      "description": "새로운 캠페인 찾아보기"
+      "label": "프로필"
     },
     {
-      "name": "대시보드",
-      "url": "/dashboard",
-      "description": "내 대시보드 바로가기"
+      "src": "/screenshots/screenshot-3.png",
+      "sizes": "1170x2532",
+      "type": "image/png",
+      "label": "탐색"
     }
-  ]
+  ],
+  
+  "shortcuts": [
+    {
+      "name": "새 게시물",
+      "short_name": "작성",
+      "description": "새 게시물 작성하기",
+      "url": "/post/new",
+      "icons": [
+        {
+          "src": "/icons/new-post-96x96.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "알림",
+      "short_name": "알림",
+      "description": "알림 확인하기",
+      "url": "/notifications",
+      "icons": [
+        {
+          "src": "/icons/notification-96x96.png",
+          "sizes": "96x96"
+        }
+      ]
+    },
+    {
+      "name": "프로필",
+      "short_name": "프로필",
+      "description": "내 프로필 보기",
+      "url": "/profile",
+      "icons": [
+        {
+          "src": "/icons/profile-96x96.png",
+          "sizes": "96x96"
+        }
+      ]
+    }
+  ],
+  
+  "related_applications": [
+    {
+      "platform": "play",
+      "url": "https://play.google.com/store/apps/details?id=com.itda.app",
+      "id": "com.itda.app"
+    },
+    {
+      "platform": "itunes",
+      "url": "https://apps.apple.com/app/itda/id123456789"
+    }
+  ],
+  
+  "prefer_related_applications": false,
+  
+  "protocol_handlers": [
+    {
+      "protocol": "web+itda",
+      "url": "/?url=%s"
+    }
+  ],
+  
+  "share_target": {
+    "action": "/share",
+    "method": "POST",
+    "enctype": "multipart/form-data",
+    "params": {
+      "title": "title",
+      "text": "text",
+      "url": "url",
+      "files": [
+        {
+          "name": "media",
+          "accept": ["image/*", "video/*"]
+        }
+      ]
+    }
+  },
+  
+  "display_override": [
+    "window-controls-overlay",
+    "standalone",
+    "minimal-ui",
+    "browser"
+  ],
+  
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
+  
+  "launch_handler": {
+    "client_mode": "focus-existing"
+  },
+  
+  "handle_links": "preferred",
+  
+  "file_handlers": [
+    {
+      "action": "/upload",
+      "accept": {
+        "image/*": [".jpg", ".jpeg", ".png", ".gif", ".webp"],
+        "video/*": [".mp4", ".webm"]
+      }
+    }
+  ],
+  
+  "permissions_policy": {
+    "autoplay": ["self"],
+    "camera": ["self"],
+    "microphone": ["self"],
+    "geolocation": ["self"],
+    "notifications": ["self"]
+  }
 }
